[package]
name = "stateset-group"
version = "0.0.7"
authors = ["Dom Steil <dom@stateset.io"]
edition = "2023"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.14.0" }
cosmwasm-storage = { version = "0.14.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0" }
